Fixed background image being cut off!

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,7 +28,7 @@ $panel-green: #B9CD5F;
     background-size: auto;
     background-position-x: center;
     background-repeat: no-repeat;
-    min-height: 1200px;
+    min-height: 100%;
 }
 
 // Style-town starts here!
